# scrapy_kombu

./: __init__.py  constants.py  message.py  pyproject.toml  rabbit_spider.py
scrapy_kombu/: __init__.py  rabbit_spider.py
