[project]
name = "scrapy-kombu"
version = "0.1.0"
authors = ["evinstar"]

description = "A project for convient scrapy spider with rabbit message queue"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/evinstar/scrapy_kombu"
"Bug Tracker" = "https://github.com/evinstar/scrapy_kombu/issues"

[tool.poetry]
name = "scrapy-kombu"
version = "0.1.0"
description = "A project for convient scrapy spider with rabbit message queue"
authors = ["evinstar"]
license = "MIT"
readme = "README.md"
packages = [{include = "scrapy_kombu"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.9.0"
tenacity = "^8.2.2"
kombu = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


